--- a/1WelcomeApp/Views/Movie/Random.cshtml
+++ b/1WelcomeApp/Views/Movie/Random.cshtml
@@ -1,8 +1,29 @@
-﻿@model _1WelcomeApp.Models.Movie
+﻿@model _1WelcomeApp.ViewModels.RandomMovieViewModel
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Name</h2>
+@*code block c#*@
+@{
+    var className = Model.Customers.Count > 5 ? "popular" : null;
+ }
+
+<h2 class="@className">@Model.Movie.Name</h2>
+
+@if (Model.Customers.Count == 0)
+{
+    <p>No one has rented this movie yet.</p>
+}
+else
+{
+    <h3>Customers who rented this movie:</h3>
+    <ul>
+        @foreach (var customer in Model.Customers)
+        {
+            <li>@customer.Name</li>
+        }
+    </ul>
+}
+
 
