Section 3 Exercise 1: Add member ship type to customer lists: adjust code of controller and view

--- a/1WelcomeApp/Views/Customer/Index.cshtml
+++ b/1WelcomeApp/Views/Customer/Index.cshtml
@@ -17,6 +17,7 @@
             <thead>
                 <tr>
                     <th>Customer</th>
+                    <th>Membership Type</th>
                 </tr>
             </thead>
 
@@ -27,6 +28,15 @@
                         <a href="@Url.Action("Edit", "Customer", new { id = customer.Id })">@customer.Name</a>
                         @*@Html.ActionLink(@customer.Name, "Edit", "Customer", new { id = customer.Id }, null)*@
                     </td>
+
+                    @if (customer.MembershipType != null)
+                    {
+                       <td>@customer.MembershipType.Name</td>
+                    }
+                    else
+                    {
+                        <td>Unknown</td>
+                    }
                 </tr>
             }
         </table>
