--- a/1WelcomeApp/Views/Customer/Edit.cshtml
+++ b/1WelcomeApp/Views/Customer/Edit.cshtml
@@ -6,9 +6,16 @@
 
 <main aria-labelledby="title">
     <h2>Customer Infomation of @Model.Name</h2>
-    <h3>Subscribe To Newsletter @Model.IsSubsribedToNewsletter</h3>
+    @*<h3>Subscribe To Newsletter @Model.IsSubsribedToNewsletter</h3>
     <h3>Sign sup Fee: @Model.MembershipType.SignUpFee</h3>
     <h3>Discount rate: @Model.MembershipType.DiscountRate%</h3>
-    <h3>Duration in Month:  @Model.MembershipType.DurationInMonth</h3>
+    <h3>Duration in Month:  @Model.MembershipType.DurationInMonth</h3>*@
+
+    <h3>Membership Type:  @Model.MembershipType.Name</h3>
+
+    @if (Model.Birthdate.HasValue)
+    {
+        <h3>BirthDate: @Model.Birthdate.Value.ToShortDateString()</h3>
+    }
 </main>
 
