Section 3 Exercise 3: Display the list of movie and their detail: add some code in Movie controller and views ( index and detail)

--- a/1WelcomeApp/Views/Movie/Index.cshtml
+++ b/1WelcomeApp/Views/Movie/Index.cshtml
@@ -16,13 +16,15 @@
             <thead>
                 <tr>
                     <th>Movie</th>
+                    <th>Genre</th>
                 </tr>
             </thead>
 
             @foreach (var movie in Model)
             {
                 <tr>
-                    <td>@movie.Name - @movie.Publisher </td>
+                    <td> @Html.ActionLink(movie.Name, "Edit", "Movie", new { id = movie.Id }, null)</td>
+                    <td>@movie.Genre.Name</td>
                 </tr>
             }
         </table>
