--- a/1WelcomeApp/Views/Movie/Edit.cshtml
+++ b/1WelcomeApp/Views/Movie/Edit.cshtml
@@ -1,9 +1,23 @@
-﻿
+﻿@model _1WelcomeApp.Models.Movie 
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Id = @ViewBag.MovieId</h2>
-<h3>@ViewData["trang"]</h3>
+<h1>@Model.Name</h1>
+
+<ul>
+    <li>
+        Genre: @Model.Genre.Name
+    </li>
+    <li>
+        Release Date: @Model.ReleaseDate.ToLongDateString()
+    </li>
+    <li>
+        Date Added: @Model.DateAdded.ToLongDateString()
+    </li>
+    <li>
+        Number Instock: @Model.NumberInStock
+    </li>
+</ul>
 
