Section 4: Build Forms: Dropdown lists

--- a/1WelcomeApp/Views/Customer/New.cshtml
+++ b/1WelcomeApp/Views/Customer/New.cshtml
@@ -1,4 +1,4 @@
-﻿@model _1WelcomeApp.Models.Customer
+﻿@model  _1WelcomeApp.Models.NewCustomerViewModel
 @{
     ViewBag.Title = "New";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -9,18 +9,24 @@
 @using (Html.BeginForm("Create", "Customer"))
 {
     <div class="form-group">
-        @Html.LabelFor(m => m.Name)
-        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Customer.Name)
+        @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
     </div>
+    <br />
     <div class="form-group">
-        @Html.LabelFor(m => m.Birthdate)
-        @Html.TextBoxFor(m => m.Birthdate, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Customer.Birthdate)
+        @Html.TextBoxFor(m => m.Customer.Birthdate, new { @class = "form-control" })
     </div>
     <br />
     <div class="form-check">
         <label class="form-check-label">
-            @Html.CheckBoxFor(m => m.IsSubsribedToNewsletter, new { @class = "form-check-input" })  Subscribed to Newsletter 
+            @Html.CheckBoxFor(m => m.Customer.IsSubsribedToNewsletter, new { @class = "form-check-input" })  Subscribed to Newsletter
         </label>
+    </div>
+    <br />
+    <div class="dropdown-menu-dark">
+        @Html.LabelFor(m => m.Customer.MembershipTypeId)
+        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "dropdown-item" })
     </div>
 }
 
