--- a/1WelcomeApp/Views/Customer/Index.cshtml
+++ b/1WelcomeApp/Views/Customer/Index.cshtml
@@ -6,7 +6,7 @@
 
 <main aria-labelledby="title">
     <div>
-        <a href="@Url.Action("New", "Customer")" class="btn btn-primary">Add New Customer</a>
+        <a href="@Url.Action("AddOrUpdate", "Customer", new { id = 0 })" class="btn btn-primary">Add New Customer</a>
     </div>
 
     @if (Model.Customers.Count <= 0)
@@ -27,7 +27,7 @@
             {
                 <tr>
                     <td>
-                        <a href="@Url.Action("Edit", "Customer", new { id = customer.Id })">@customer.Name</a>
+                        <a href="@Url.Action("AddOrUpdate", "Customer", new { id = customer.Id })">@customer.Name</a>
                     </td>
 
                     @if (customer.MembershipType != null)
