--- a/1WelcomeApp/Views/Customer/New.cshtml
+++ b/1WelcomeApp/Views/Customer/New.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Customer</h2>
 
-@using (Html.BeginForm("Create", "Customer"))
+@using (Html.BeginForm("Save", "Customer"))
 {
     <div class="form-group">
         @Html.HiddenFor(m => m.Customer.Id)
@@ -21,15 +21,16 @@
         @Html.TextBoxFor(m => m.Customer.Birthdate, "{0:yyyy-MM-dd}", new { @class = "form-control", @type = "date" })
     </div>
     <br />
+    <div class="dropdown-menu-dark">
+        @Html.LabelFor(m => m.Customer.MembershipTypeId)
+        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "dropdown-item" })
+    </div>
+    <br />
     <div class="form-check">
         <label class="form-check-label">
             @Html.CheckBoxFor(m => m.Customer.IsSubsribedToNewsletter, new { @class = "form-check-input" })  Subscribed to Newsletter
         </label>
     </div>
     <br />
-    <div class="dropdown-menu-dark">
-        @Html.LabelFor(m => m.Customer.MembershipTypeId)
-        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "dropdown-item" })
-    </div>
     <button type="submit" class="btn btn-primary">Save</button>
 }
