--- a/1WelcomeApp/Views/Customer/New.cshtml
+++ b/1WelcomeApp/Views/Customer/New.cshtml
@@ -38,3 +38,8 @@
     <br />
     <button type="submit" class="btn btn-primary">Save</button>
 }
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
