--- a/1WelcomeApp/Views/Movie/Index.cshtml
+++ b/1WelcomeApp/Views/Movie/Index.cshtml
@@ -6,7 +6,7 @@
 
 <main aria-labelledby="title">
     <div>
-        <a href="@Url.Action("AddOrUpdate", "Movie", new { id = 0 })" class="btn btn-primary">New Movie</a>
+        <a href="@Url.Action("Add", "Movie")" class="btn btn-primary">New Movie</a>
     </div>
     <br />
 
@@ -27,7 +27,7 @@
             @foreach (var movie in Model)
             {
                 <tr>
-                    <td> @Html.ActionLink(movie.Name, "AddOrUpdate", "Movie", new { id = movie.Id }, null)</td>
+                    <td> @Html.ActionLink(movie.Name, "Edit", "Movie", new { id = movie.Id }, null)</td>
                     <td>@movie.Genre.Name</td>
                 </tr>
             }
