--- a/1WelcomeApp/Views/Movie/UpdateForm.cshtml
+++ b/1WelcomeApp/Views/Movie/UpdateForm.cshtml
@@ -1,43 +1,44 @@
 ﻿@model _1WelcomeApp.Models.MovieFormViewModel
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = Model.Title;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@if (Model.Movie.Id > 0)
-{
-    <h1>Movie</h1>
-}
-else
-{
-    <h1>New Movie</h1>
-}
+<h1>@Model.Title</h1>
 
 <br />
 
 @using (Html.BeginForm("Save", "Movie"))
 {
+
+    @Html.ValidationSummary(true, "Please fix the following errors")
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.Name)
-        @Html.TextBoxFor(m => m.Movie.Name, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Name)
+        
+        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Name)
     </div>
     <br />
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.ReleaseDate)
-        @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:yyyy-MM-dd}", new { @class = "form-control", @type = "date" })
+        @Html.LabelFor(m => m.ReleaseDate)
+        @Html.TextBoxFor(m => m.ReleaseDate, "{0:yyyy-MM-dd}", new { @class = "form-control", @type = "date" })
+        @Html.ValidationMessageFor(m => m.ReleaseDate)
     </div>
     <br />
     <div class="dropdown-menu-dark">
-        @Html.LabelFor(m => m.Movie.GenreId)
-        @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(Model.Genres, "Id", "Name"), "Select Genre", new { @class = "dropdown-item" })
+        @Html.LabelFor(m => m.GenreId)
+        @Html.DropDownListFor(m => m.GenreId, new SelectList(Model.Genres, "Id", "Name"), "Select Genre", new { @class = "dropdown-item" })
+        @Html.ValidationMessageFor(m => m.GenreId)
     </div>
     <br />
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.NumberInStock)
-        @Html.TextBoxFor(m => m.Movie.NumberInStock, new { @class = "form-control" })
+        @Html.LabelFor(m => m.NumberInStock)
+        @Html.TextBoxFor(m => m.NumberInStock, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.NumberInStock)
     </div>
     <br />
-    @Html.HiddenFor(m => m.Movie.Id)
+    @Html.HiddenFor(m => m.Id)
+    @Html.AntiForgeryToken()
 
     <button type="submit" class="btn btn-primary">Save</button>
 }
