--- a/1WelcomeApp/Views/Customer/Index.cshtml
+++ b/1WelcomeApp/Views/Customer/Index.cshtml
@@ -53,7 +53,7 @@
 {
     <script>
         $(document).ready(function () {
-            $("#customers .js-delete").on("click", function () {
+            $("#customers").on("click", ".js-delete", function () {
 
                 bootbox.confirm("Are you sure to delete this customer?", function (result) {
                     if (result) {
