section 7: Client side development: Returning Hierarchical Data (memberShipType list in Customer)

--- a/1WelcomeApp/Views/Customer/Index.cshtml
+++ b/1WelcomeApp/Views/Customer/Index.cshtml
@@ -1,4 +1,85 @@
-﻿@model _1WelcomeApp.ViewModels.CustomerViewModel
+﻿ <!--#region for call Controller of Asp.net mvc 5  -->
+@*@model _1WelcomeApp.ViewModels.CustomerViewModel
+    @{
+        ViewBag.Title = "Index";
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
+
+    <main aria-labelledby="title">
+        <div>
+            <a href="@Url.Action("AddOrUpdate", "Customer", new { id = 0 })" class="btn btn-primary">Add New Customer</a>
+        </div>
+
+        @if (Model.Customers.Count <= 0)
+        {
+            <h2 id="title">There is no any customers</h2>
+        }
+        else
+        {
+            <table id="customers" class="table table-bordered table-hover">
+                <thead>
+                    <tr>
+                        <th>Customer</th>
+                        <th>Membership Type</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+
+                @foreach (var customer in Model.Customers)
+                {
+                    <tr>
+                        <td>
+                            <a href="@Url.Action("AddOrUpdate", "Customer", new { id = customer.Id })">@customer.Name</a>
+                        </td>
+
+                        @if (customer.MembershipType != null)
+                        {
+                            <td>@customer.MembershipType.Name</td>
+                        }
+                        else
+                        {
+                            <td>Unknown</td>
+                        }
+
+                        <td>
+                            <button data-customer-id="@customer.Id" class="btn-link js-delete">Delete</button>
+                        </td>
+                    </tr>
+                }
+            </table>
+        }
+    </main>
+
+    @section scripts
+    {
+        <script>
+            $(document).ready(function () {
+                //use datatable plugin
+                $("#customers").DataTable();
+
+                $("#customers").on("click", ".js-delete", function () {
+
+                    bootbox.confirm("Are you sure to delete this customer?", function (result) {
+                        if (result) {
+                            $.ajax({
+                                url: "/api/customers/" + $(this).attr("data-customer-id"),
+                                method: "DELETE",
+                                success: function () {
+                                    console.log("Delete successfully")
+                                    location.reload();
+                                }
+                            });
+                        }
+                    });
+                });
+            });
+        </script>
+    }*@
+<!--#endregion -->
+
+
+
+<!--#region for call Restfull API  -->
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -9,44 +90,17 @@
         <a href="@Url.Action("AddOrUpdate", "Customer", new { id = 0 })" class="btn btn-primary">Add New Customer</a>
     </div>
 
-    @if (Model.Customers.Count <= 0)
-    {
-        <h2 id="title">There is no any customers</h2>
-    }
-    else
-    {
-        <table id="customers" class="table table-bordered table-hover">
-            <thead>
-                <tr>
-                    <th>Customer</th>
-                    <th>Membership Type</th>
-                    <th>Delete</th>
-                </tr>
-            </thead>
-
-            @foreach (var customer in Model.Customers)
-            {
-                <tr>
-                    <td>
-                        <a href="@Url.Action("AddOrUpdate", "Customer", new { id = customer.Id })">@customer.Name</a>
-                    </td>
-
-                    @if (customer.MembershipType != null)
-                    {
-                        <td>@customer.MembershipType.Name</td>
-                    }
-                    else
-                    {
-                        <td>Unknown</td>
-                    }
-
-                    <td>
-                        <button data-customer-id="@customer.Id" class="btn-link js-delete">Delete</button>
-                    </td>
-                </tr>
-            }
-        </table>
-    }
+    <table id="customers" class="table table-bordered table-hover">
+        <thead>
+            <tr>
+                <th>Customer</th>
+                <th>Membership Type</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
 </main>
 
 @section scripts
@@ -54,7 +108,30 @@
     <script>
         $(document).ready(function () {
             //use datatable plugin
-            $("#customers").DataTable();
+            $("#customers").DataTable({
+                ajax: {
+                    url: "/api/customers",
+                    dataSrc: ""
+                },
+                columns: [
+                    {
+                        data: "name",
+                        render: function (data, type, customer) {
+                            return "<a href='/customer/update/" + customer.id + "'>" + customer.name + "</a>";
+                        }
+                    },
+                    {
+                        data: "membershipType.name",
+                        defaultContent: "Unknown"
+                    },
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<button data-customer-id=" + data + " class='btn-link js-delete'>Delete</button>";
+                        }
+                    }
+                ]
+            });
 
             $("#customers").on("click", ".js-delete", function () {
 
@@ -67,6 +144,10 @@
                                 console.log("Delete successfully")
                                 location.reload();
                             }
+                            //error: function (xhr, status, error) {
+                            //    console.log(xhr.responseText);
+                            //}
+
                         });
                     }
                 });
@@ -74,3 +155,4 @@
         });
     </script>
 }
+<!--#endregion -->
