--- a/1WelcomeApp/Views/Customer/Index.cshtml
+++ b/1WelcomeApp/Views/Customer/Index.cshtml
@@ -108,7 +108,7 @@
     <script>
         $(document).ready(function () {
             //use datatable plugin
-            $("#customers").DataTable({
+            var table = $("#customers").DataTable({
                 ajax: {
                     url: "/api/customers",
                     dataSrc: ""
@@ -134,15 +134,17 @@
             });
 
             $("#customers").on("click", ".js-delete", function () {
+                var button = $(this);
 
                 bootbox.confirm("Are you sure to delete this customer?", function (result) {
                     if (result) {
                         $.ajax({
-                            url: "/api/customers/" + $(this).attr("data-customer-id"),
+                            url: "/api/customers/" + button.attr("data-customer-id"),
                             method: "DELETE",
                             success: function () {
                                 console.log("Delete successfully")
-                                location.reload();
+                                //location.reload();
+                                table.row(button.parents("tr")).remove().draw();
                             }
                             //error: function (xhr, status, error) {
                             //    console.log(xhr.responseText);
