--- a/1WelcomeApp/Views/Movie/Index.cshtml
+++ b/1WelcomeApp/Views/Movie/Index.cshtml
@@ -1,4 +1,46 @@
-﻿@model IEnumerable<_1WelcomeApp.Models.Movie>
+﻿<!--#region for call Controller of Asp.net mvc 5  -->
+@*@model IEnumerable<_1WelcomeApp.Models.Movie>
+    @{
+        ViewBag.Title = "Index";
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
+
+    <main aria-labelledby="title">
+        <div>
+            <a href="@Url.Action("Add", "Movie")" class="btn btn-primary">New Movie</a>
+        </div>
+        <br />
+
+        @if (Model.ToList().Count <= 0)
+        {
+            <h2 id="title">There is no any customers</h2>
+        }
+        else
+        {
+            <table id="movies" class="table	table­‐bordered table­‐hover">
+                <thead>
+                    <tr>
+                        <th>Movie</th>
+                        <th>Genre</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+
+                @foreach (var movie in Model)
+                {
+                    <tr>
+                        <td> @Html.ActionLink(movie.Name, "Edit", "Movie", new { id = movie.Id }, null)</td>
+                        <td>@movie.Genre.Name</td>
+                        <td><button data-movie-id="@movie.Id" class="btn-link js-delete">Delete</button>
+                    </tr>
+                }
+            </table>
+        }
+    </main>*@
+<!--#endregion -->
+
+
+<!--#region for call Restfull API  -->
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -10,29 +52,70 @@
     </div>
     <br />
 
-    @if (Model.ToList().Count <= 0)
-    {
-        <h2 id="title">There is no any customers</h2>
-    }
-    else
-    {
-        <table class="table	table­‐bordered table­‐hover">
+    <table id="movies" class="table table-bordered table-hover">
             <thead>
                 <tr>
                     <th>Movie</th>
                     <th>Genre</th>
+                    <th>Delete</th>
                 </tr>
             </thead>
-
-            @foreach (var movie in Model)
-            {
-                <tr>
-                    <td> @Html.ActionLink(movie.Name, "Edit", "Movie", new { id = movie.Id }, null)</td>
-                    <td>@movie.Genre.Name</td>
-                </tr>
-            }
-        </table>
-    }
+            <tbody>
+            </tbody>
+     </table>
 </main>
 
 
+
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+
+            //use datatable plugin
+            var table = $("#movies").DataTable({
+                ajax: {
+                    url: "/api/movies",
+                    dataSrc: ""
+                },
+                columns: [
+                    {
+                        data: "name",
+                        render: function (data, type, movie) {
+                            return "<a href='/movies/edit/" + movie.id + "'>" + movie.name + "</a>";
+                        }
+                    },
+                    {
+                        data: "genre.name"
+                    },
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<button class='btn-link js-delete' data-movie-id=" + data + ">Delete</button>";
+                        }
+                    }
+                ]
+            });
+
+            $("#movies").on("click", ".js-delete", function () {
+                var button = $(this);
+
+
+                bootbox.confirm("Are you sure to delete this movie?", function (result) {
+                    if (result) {
+                        $.ajax({
+                            url: "/api/movies/" + button.attr("data-movie-id"),
+                            method: "DELETE",
+                            success: function () {
+                                console.log("Delete successfully");
+                                table.row(button.parents("tr")).remove().draw();
+                            }
+                        });
+                    }
+                });
+            });
+        });
+       
+    </script>
+}
+<!--#endregion -->
