--- a/1WelcomeApp/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/1WelcomeApp/Views/Account/ExternalLoginConfirmation.cshtml
@@ -24,6 +24,12 @@
                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
             </div>
+            <hr />
+            @Html.LabelFor(m => m.DrivingLicense, new { @class = "col-md-2 col-form-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.DrivingLicense, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.DrivingLicense, "", new { @class = "text-danger" })
+            </div>
         </div>
         <div class="row">
             <div class="offset-md-2 col-md-10">
