section 8: authentication and authorization: Exercise Final: Add phone field in 2 registration forms (1 standard and 1 facebook)

--- a/1WelcomeApp/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/1WelcomeApp/Views/Account/ExternalLoginConfirmation.cshtml
@@ -30,6 +30,12 @@
                 @Html.TextBoxFor(m => m.DrivingLicense, new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.DrivingLicense, "", new { @class = "text-danger" })
             </div>
+            <hr />
+            @Html.LabelFor(m => m.Phone, new { @class = "col-md-2 col-form-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Phone, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Phone, "", new { @class = "text-danger" })
+            </div>
         </div>
         <div class="row">
             <div class="offset-md-2 col-md-10">
