--- a/1WelcomeApp/Views/Manage/Index.cshtml
+++ b/1WelcomeApp/Views/Manage/Index.cshtml
@@ -13,7 +13,14 @@
         <dl class="dl-horizontal">
             <dt>Driving Licence:</dt>
             <dd>
-               @Model.User.DrivingLicense
+                @Model.User.DrivingLicense
+            </dd>
+        </dl>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>Phone Number:</dt>
+            <dd>
+                @Model.User.Phone
             </dd>
         </dl>
         <hr />
