Section 9: Performance Optimization: adding auto completion search function in rental

--- a/1WelcomeApp/Views/Rental/New.cshtml
+++ b/1WelcomeApp/Views/Rental/New.cshtml
@@ -2,23 +2,49 @@
 
 @{
     ViewBag.Title = "New Rental Form";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>New Rental Form</h2>
 
-<form action="/" method="post">
+<form>
     <div class="form-group">
         <label>Customer</label>
-        <input type="text" value="" class="form-control" />
+        <input id="customer" type="text">
     </div>
 
     <div class="form-group">
         <label>Movies</label>
-        <input type="text" value="" class="form-control" />
+        <input type="text" placeholder="Input Movies" >
     </div>
     <br />
 
     <button class="btn btn-primary">Submit</button>
 </form>
 
+
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+
+
+            var customersList = new Bloodhound({
+                datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
+                queryTokenizer: Bloodhound.tokenizers.whitespace,
+                remote: {
+                    url: '../api/customers?query=%QUERY',
+                    wildcard: '%QUERY'
+                }
+            });
+
+            $('#customer').typeahead({
+
+            }, {
+                name: 'customers',
+                display: 'name',
+                source: customersList
+            });
+
+        })
+    </script>   
+}
