--- a/1WelcomeApp/Views/Rental/New.cshtml
+++ b/1WelcomeApp/Views/Rental/New.cshtml
@@ -9,15 +9,25 @@
 <form>
     <div class="form-group">
         <label>Customer</label>
-        <input id="customer" type="text">
+        <div class="tt-container">
+            <input id="customer" type="text" class="form-group">
+        </div>
     </div>
 
     <div class="form-group">
         <label>Movies</label>
-        <input id="movie" type="text">
+        <div class="tt-container">
+            <input id="movie" type="text" class="form-group">
+        </div>
     </div>
 
-    <ul id="moviesList" class="form-group"></ul>
+    <div class="row">
+        <div class="col-md-4-sm-4">
+            <ul id="moviesList" class="form-group">
+            </ul>
+        </div>
+    </div>
+    
 
     <br />
 
@@ -73,7 +83,7 @@
                 source: moviesList
             })
                 .on("typeahead:select", function (event, movie) {
-                    $('#moviesList').append("<li>" + movie.name + "</li>");
+                    $('#moviesList').append("<li class='list-group-item'>" + movie.name + "</li>");
 
                     $('#moviesList').typeahead("val", "");
 
