--- a/1WelcomeApp/Views/Rental/New.cshtml
+++ b/1WelcomeApp/Views/Rental/New.cshtml
@@ -6,7 +6,7 @@
 
 <h2>New Rental Form</h2>
 
-<form>
+<form id="newRental">
     <div class="form-group">
         <label>Customer</label>
         <div class="tt-container">
@@ -22,7 +22,7 @@
     </div>
 
     <div class="row">
-        <div class="col-md-4-sm-4">
+        <div class="col-md-4 col-sm-4">
             <ul id="moviesList" class="form-group">
             </ul>
         </div>
@@ -89,6 +89,21 @@
 
                     viemModel.movieIds.push(movie.id);
                 });
+
+            $('#newRental').submit(function (e) {
+                e.preventDefault();
+                $.ajax({
+                    url: '../api/newRentals',
+                    method: 'POST',
+                    data: viemModel
+                })
+                    .done(function () {
+                        alert('Rental created successfully');
+                    })
+                    .fail(function () {
+                        alert('Failed to create rental');
+                    });
+            });
 
         })
     </script>
